fdo#70100 Detect single stream excel files with BOF ID 5

Change-Id: I321b7a08e0436a9c33878acd1ce2f98c497040b5
Reviewed-on: https://gerrit.libreoffice.org/6447
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
(cherry picked from commit 71882916f617528a6d6fcc54450674dc3f630319)